# Software-Renderer

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Engine.cpp  Engine.h  Material.h  MathHelper.h  Mesh.cpp  Mesh.h  README.md  Rasterizer.cpp  ResourceLoader.h  Screen.cpp  Screen.h  SoftwareDevice.cpp  SoftwareDevice.h  Texture.cpp  Texture.h
SoftwareRenderer/: SoftwareRenderer.sln
SoftwareRenderer/SoftwareRenderer/: App.cpp  App.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Material.cpp  Material.h  MathHelper.h  Rasterizer.cpp  Rasterizer.h  RayTracer.cpp  RayTracer.h  ResourceLoader.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  SoftwareRenderer.vcxproj  SoftwareRenderer.vcxproj.filters  Utility.h  dna.txt
SoftwareRenderer/SoftwareRenderer/Content/: Luxo.fbx  LuxoPhong.dae  RedUtahTeapotPhong.dae
SoftwareRenderer/SoftwareRenderer/Content/Textures/: Checkered.tx
SoftwareRenderer/SoftwareRenderer/Content/Textures/.mayaSwatches/: BulbaBackDiffuse.png_hcm.swatch  BulbaBodyDiffuse.png_hcm.swatch  BulbaEyeDiffuse.png_hcm.swatch  BulbeEyeDiffuse.png_hcm.swatch  Checkered.jpg_hcm.swatch  Checkered.png_hcm.swatch  CuboneBodyDiffuse.png_hcm.swatch  GengarBody2Diffuse.png_hcm.swatch  GengarBodyDiffuse.png_hcm.swatch  GengarEyeDiffuse.png_hcm.swatch  HiccupFace_olderAge.png_hcm.swatch
